--- a/TestsForCI/TestsForCI.csproj
+++ b/TestsForCI/TestsForCI.csproj
@@ -1,23 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NUnit3TestAdapter.3.12.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.12.0\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="..\packages\NUnit.3.11.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{378A6621-A24A-460E-9D63-3068592B3E63}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ConcertCI</RootNamespace>
-    <AssemblyName>ConcertCI</AssemblyName>
+    <ProjectGuid>{6C206AC8-4214-4932-AFA1-B6774AAAE82C}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>TestsForCI</RootNamespace>
+    <AssemblyName>TestsForCI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +27,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -58,8 +57,6 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -71,71 +68,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CityActions.cs" />
-    <Compile Include="Concert.cs" />
-    <Compile Include="ConcertActions.cs" />
-    <Compile Include="ConcertDB.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ConcertDB.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ConcertDB.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ConcertDB.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ConcertDB.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Event.cs" />
-    <Compile Include="GroupActions.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubscriptionActions.cs" />
-    <Compile Include="tblConcerts.cs">
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tblGroups.cs">
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tblNotifications.cs">
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tblSubscriptions.cs">
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tblUsers.cs">
-      <DependentUpon>ConcertDB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UserActions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConcertCI\ConcertCI.csproj">
+      <Project>{378a6621-a24a-460e-9d63-3068592b3e63}</Project>
+      <Name>ConcertCI</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="ConcertDB.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ConcertDB.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="ConcertDB.edmx.diagram">
-      <DependentUpon>ConcertDB.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ConcertDB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ConcertDB.edmx</DependentUpon>
-      <LastGenOutput>ConcertDB.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="ConcertDB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ConcertDB.edmx</DependentUpon>
-      <LastGenOutput>ConcertDB.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -143,5 +87,6 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.11.0\build\NUnit.props'))" />
+    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.12.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.12.0\build\net35\NUnit3TestAdapter.props'))" />
   </Target>
 </Project>
