--- a/ConcertCI/ConcertCI.csproj
+++ b/ConcertCI/ConcertCI.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.10.1\lib\net45\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -89,10 +92,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ConcertDB.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ConcertSearch.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="GroupActions.cs" />
+    <Compile Include="KudaGoSearchApi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchApi.cs" />
     <Compile Include="SubscriptionActions.cs" />
     <Compile Include="tblConcerts.cs">
       <DependentUpon>ConcertDB.tt</DependentUpon>
